--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <header class="container">
       <a href="/" class="logo">
         <img
-          src="/catademy/assets/images/logo.png"
+          src="/assets/images/logo.webp"
           alt="Catademy Logo"
           class="logo__icon"
+          height="60"
+          width="60"
         />
         <h3 class="righteous-regular">Catademy</h3>
       </a>
@@ -23,19 +25,22 @@
         <a href="#" class="menu__link">Gallery</a>
         <a href="#" class="menu__link">Subscribe</a>
       </nav>
-      <img
-        src="/catademy/assets/images/paw.svg"
-        alt="Paw Hamburger"
-        class="hamburger"
-      />
+      <img src="/assets/images/paw.svg" alt="Paw Hamburger" class="hamburger" />
     </header>
-    <main class="container">
+    <!-- <main class="container">
       <section class="intro">
         <div class="intro__content">
+          <img
+            src="/assets/images/hero-cat.webp"
+            alt="Cat Hero Image"
+            class="intro__image-mobile"
+            height="213"
+            width="262"
+          />
           <h1 class="intro__title">Your puRRRfect educator</h1>
           <div class="intro__subtitle">
             <img
-              src="/catademy/assets/images/subtitle-cat.png"
+              src="/assets/images/subtitle-cat.webp"
               alt=""
               class="intro__subtitle-image"
             />
@@ -47,39 +52,48 @@
           <div class="intro__footer">
             <button class="intro__button">Subscribe</button>
             <button class="intro__button">
-              <svg
-                viewBox="0 0 30 30"
-                xmlns="http://www.w3.org/2000/svg"
-                width="36"
-                height="36"
-              >
-                <g data-name="Layer 2">
-                  <path
-                    d="M15 2.5A12.5 12.5 0 1 0 27.5 15 12.514 12.514 0 0 0 15 2.5Zm4.968 14.14-5.647 3.942a2 2 0 0 1-3.144-1.64v-7.883a2 2 0 0 1 3.144-1.641l5.647 3.941a2 2 0 0 1 0 3.28Z"
-                    fill="none"
-                  ></path>
-                  <path
-                    d="M15 0a15 15 0 1 0 15 15A15.016 15.016 0 0 0 15 0Zm0 27.5A12.5 12.5 0 1 1 27.5 15 12.514 12.514 0 0 1 15 27.5Z"
-                    fill="#e25300"
-                    class="fill-000000"
-                  ></path>
-                  <path
-                    d="M19.968 13.36 14.32 9.417a2 2 0 0 0-3.144 1.64v7.883a2 2 0 0 0 3.144 1.641l5.647-3.941v-.001a2 2 0 0 0 0-3.28Z"
-                    fill="#e25300"
-                    class="fill-000000"
-                  ></path>
-                </g>
-              </svg>
+              <span class="icon-watch"></span>
               <span>Watch intro</span>
             </button>
           </div>
         </div>
-        <img
-          src="/catademy/assets/images/hero-cat.png"
-          alt="Cat Hero Image"
-          class="intro__image"
-        />
+        <div class="image__container">
+          <img
+            src="/assets/images/hero-cat.webp"
+            alt="Cat Hero Image"
+            class="intro__image"
+            width="400"
+          />
+        </div>
       </section>
-    </main>
+    </main> -->
+    <footer>
+      <div class="footer__line"></div>
+      <div class="footer__container">
+        <ul>
+          <li>
+            <a href="#" class="social__link"
+              ><span class="icon-youtube"></span
+            ></a>
+          </li>
+          <li>
+            <a href="#" class="social__link"
+              ><span class="icon-instagram"></span
+            ></a>
+          </li>
+          <li>
+            <a href="#" class="social__link"
+              ><span class="icon-facebook"></span
+            ></a>
+          </li>
+        </ul>
+        <nav>
+          <a href="#" class="footer__link">Contacts</a>
+          <a href="#" class="footer__link">FAQ</a>
+          <a href="#" class="footer__link">Privacy Policy</a>
+          <a href="#" class="footer__link">Terms & Conditions</a>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
