--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
       <img src="/assets/images/paw.svg" alt="Paw Hamburger" class="hamburger" />
     </header>
-    <!-- <main class="container">
+    <main class="container">
       <section class="intro">
         <div class="intro__content">
           <img
@@ -58,15 +58,166 @@
           </div>
         </div>
         <div class="image__container">
-          <img
+          <!-- <img
             src="/assets/images/hero-cat.webp"
             alt="Cat Hero Image"
             class="intro__image"
             width="400"
-          />
+          /> -->
         </div>
       </section>
-    </main> -->
+      <section class="info container">
+        <div class="info__wrapper">
+          <div class="stat">
+            <div class="stat_item">
+              <div class="stat_item-wrapper">
+                <p class="stat__item-title">Students</p>
+                <span class="stat__item-icon icon-hat"></span>
+              </div>
+              <p class="stat__item-value">8500+</p>
+            </div>
+            <div class="stat_item">
+              <div class="stat_item-wrapper">
+                <p class="stat__item-title">Lessons</p>
+                <span class="stat__item-icon icon-lessons"></span>
+              </div>
+              <p class="stat__item-value">200+</p>
+            </div>
+            <div class="stat_item">
+              <div class="stat_item-wrapper">
+                <p class="stat__item-title">Likes</p>
+                <span class="stat__item-icon icon-like"></span>
+              </div>
+              <p class="stat__item-value">99k+</p>
+            </div>
+          </div>
+          <div class="info__separator"></div>
+          <div class="comments">
+            <div class="slider-wrapper">
+              <div class="slider">
+                <div id="slide-1">
+                  <img
+                    src="/assets/images/man-avatar.webp"
+                    alt=""
+                    height="100"
+                    width="100"
+                    class="comment__photo"
+                  />
+                  <div class="comment__info">
+                    <span class="comment__info-name">John Doe</span>
+                    <p class="comment__info-comment">
+                      It was really cool experience, I love it so much!
+                    </p>
+                  </div>
+                </div>
+                <div id="slide-2">
+                  <img
+                    src="/assets/images/accounts-woman.webp"
+                    alt=""
+                    height="100"
+                    width="100"
+                    class="comment__photo"
+                  />
+                  <div class="comment__info">
+                    <span class="comment__info-name">Sarah Smith</span>
+                    <p class="comment__info-comment">
+                      I’ve really enjoyed the lessons and the videos are so fun!
+                      I’ll recommend it to my friends!
+                    </p>
+                  </div>
+                </div>
+                <div id="slide-3">
+                  <img
+                    src="/assets/images/man-headphones.webp"
+                    alt=""
+                    height="100"
+                    width="100"
+                    class="comment__photo"
+                  />
+                  <div class="comment__info">
+                    <span class="comment__info-name">Sam Kollins</span>
+                    <p class="comment__info-comment">
+                      Every day I’m trying to find some time and watch few
+                      lessons. It’s hilarious!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="slider-nav">
+                <a href="#slide-1"></a>
+                <a href="#slide-2"></a>
+                <a href="#slide-3"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="opportunities container">
+        <div class="opportunities-header">
+          <h2 class="opportunities__title">
+            Explore all opportunities of Catademy
+          </h2>
+          <p class="opportunities__subtitle">
+            You can find here tons of useful information and interesting, fun
+            content. All in one place. Let’s go!
+          </p>
+        </div>
+        <div class="opportunity__wrapper">
+          <div class="opportunity">
+            <div class="opportunity__background"></div>
+            <img
+              src="/assets/images/cat-opp1.webp"
+              alt=""
+              class="opportunity__image"
+              height="320"
+              width="320"
+            />
+            <div class="opportuniy__sub">
+              <span class="opportunity__title">Group lessons</span>
+              <p class="opportunity__text">
+                Make new friends, join teams and learn in a fun and productive
+                way. We are waiting for you!
+              </p>
+            </div>
+          </div>
+          <div class="opportunity">
+            <div class="opportunity__background"></div>
+            <img
+              src="/assets/images/cat-opp2.webp"
+              alt=""
+              class="opportunity__image"
+              height="320"
+              width="320"
+            />
+            <div class="opportuniy__sub">
+              <span class="opportunity__title">Videos</span>
+              <p class="opportunity__text">
+                Search among more than 500 videos and you will definitely find
+                something interesting for you.
+              </p>
+            </div>
+          </div>
+          <div class="opportunity">
+            <div class="opportunity__background"></div>
+            <img
+              src="/assets/images/cat-opp3.webp"
+              alt=""
+              class="opportunity__image"
+              height="289"
+              width="289"
+            />
+            <div class="opportuniy__sub">
+              <span class="opportunity__title">Quizzes</span>
+              <p class="opportunity__text">
+                Test your knowledge in various tests and quizzes personally
+                selected for you.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer>
       <div class="footer__line"></div>
       <div class="footer__container">
