--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="container">
       <a href="/" class="logo">
         <img
-          src="/assets/images/logo.webp"
+          src="./assets/images/logo.webp"
           alt="Catademy Logo"
           class="logo__icon"
           height="60"
@@ -25,13 +25,17 @@
         <a href="#" class="menu__link">Gallery</a>
         <a href="#" class="menu__link">Subscribe</a>
       </nav>
-      <img src="/assets/images/paw.svg" alt="Paw Hamburger" class="hamburger" />
+      <img
+        src="./assets/images/paw.svg"
+        alt="Paw Hamburger"
+        class="hamburger"
+      />
     </header>
     <main class="container">
       <section class="intro">
         <div class="intro__content">
           <img
-            src="/assets/images/hero-cat.webp"
+            src="./assets/images/hero-cat.webp"
             alt="Cat Hero Image"
             class="intro__image-mobile"
             height="213"
@@ -40,7 +44,7 @@
           <h1 class="intro__title">Your puRRRfect educator</h1>
           <div class="intro__subtitle">
             <img
-              src="/assets/images/subtitle-cat.webp"
+              src="./assets/images/subtitle-cat.webp"
               alt=""
               class="intro__subtitle-image"
             />
@@ -59,7 +63,7 @@
         </div>
         <div class="image__container">
           <!-- <img
-            src="/assets/images/hero-cat.webp"
+            src="./assets/images/hero-cat.webp"
             alt="Cat Hero Image"
             class="intro__image"
             width="400"
@@ -97,7 +101,7 @@
               <div class="slider">
                 <div id="slide-1">
                   <img
-                    src="/assets/images/man-avatar.webp"
+                    src="./assets/images/man-avatar.webp"
                     alt=""
                     height="100"
                     width="100"
@@ -112,7 +116,7 @@
                 </div>
                 <div id="slide-2">
                   <img
-                    src="/assets/images/accounts-woman.webp"
+                    src="./assets/images/accounts-woman.webp"
                     alt=""
                     height="100"
                     width="100"
@@ -128,7 +132,7 @@
                 </div>
                 <div id="slide-3">
                   <img
-                    src="/assets/images/man-headphones.webp"
+                    src="./assets/images/man-headphones.webp"
                     alt=""
                     height="100"
                     width="100"
@@ -167,7 +171,7 @@
           <div class="opportunity">
             <div class="opportunity__background"></div>
             <img
-              src="/assets/images/cat-opp1.webp"
+              src="./assets/images/cat-opp1.webp"
               alt=""
               class="opportunity__image"
               height="320"
@@ -184,7 +188,7 @@
           <div class="opportunity">
             <div class="opportunity__background"></div>
             <img
-              src="/assets/images/cat-opp2.webp"
+              src="./assets/images/cat-opp2.webp"
               alt=""
               class="opportunity__image"
               height="320"
@@ -201,7 +205,7 @@
           <div class="opportunity">
             <div class="opportunity__background"></div>
             <img
-              src="/assets/images/cat-opp3.webp"
+              src="./assets/images/cat-opp3.webp"
               alt=""
               class="opportunity__image"
               height="289"
