--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Catademy | Your puRRRfect educator</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo.webp" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -70,12 +71,12 @@
           </div>
         </div>
         <div class="image__container">
-          <!-- <img
+          <img
             src="./assets/images/hero-cat.webp"
             alt="Cat Hero Image"
             class="intro__image"
             width="400"
-          /> -->
+          />
         </div>
       </section>
       <section class="info container">
