--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         />
         <h3 class="righteous-regular">Catademy</h3>
       </a>
+      <input type="checkbox" id="menu__toggle" />
+      <label for="menu__toggle" class="toggle__label">
+        <img
+          src="./assets/images/paw.svg"
+          alt="Paw Hamburger"
+          class="hamburger"
+        />
+      </label>
       <nav class="menu">
         <a href="#" class="menu__link" aria-label="Link to About page">About</a>
         <a href="#" class="menu__link" aria-label="Link to Contacts page"
@@ -34,11 +42,6 @@
           >Subscribe</a
         >
       </nav>
-      <img
-        src="./assets/images/paw.svg"
-        alt="Paw Hamburger"
-        class="hamburger"
-      />
     </header>
     <main class="container">
       <section class="intro">
